This file contain the log of changes for the main development branch (trunk).
More detailed information about incremental changes can be found in the
history management of subversion.

2013-11-16 releases/3.11.6
        - updates to Matlab Interface build system (by T. Kelman)
        - fix to updates of R Interface [r2416, #223]
        - fixed SHAREDLIBEXT in v8-ifort's config.h [r2426, #224]
        - minor fixes to the buildsystem

2013-10-26 releases/3.11.5
        - added method IpoptApplication::RethrowNonIpoptException() to enable
          rethrowing of non-ipopt and non-bad_alloc exceptions catched in
          the *Optimize() and Initialization() methods; default is still to
          return with NonIpopt_Exception_Thrown status
        - minor fixes to the buildsystem [#215, #222]

2013-09-12 releases/3.11.4
        - hopefully fixed non-working linear solver loader in DLLs build with
          MSVS/v8-ifort project files [r2365]
        - allow MC19 to be loaded via linear solver loader (by J. Currie) [r2366]
        - fixed new point flag when running dependendency detector [r2368]
        - experimental: adapt Pardiso interface to work with MKL Pardiso
          (by J. Currie, T. Kelman) [r2369, #216]:
          - in a few tests it has been found that Pardiso from Intel MKL nowadays
            seems to work fine with Ipopt
          - to use Intel MKL with Ipopt 3.11, one has to specify the MKL libs via
            --with-pardiso and add -DHAVE_PARDISO_MKL -DHAVE_PARDISO_PARALLEL
            to the compiler flags
          - note that this is still an experimental feature (and thus not enabled
            by default)
        - updated Ipopt/R interface to version 0.8.4 [r2373]
          - additional variables have been included in the object returned from ipoptr:
            z_L : final values for the lower bound multipliers
            z_U : final values for the upper bound multipliers
            constraints : final values for the constraints